--- a/notebooks/3.0-nk-analysis-results.ipynb
+++ b/notebooks/3.0-nk-analysis-results.ipynb
@@ -45,11 +45,13 @@
    "metadata": {},
    "source": [
     "## Other considerations\n",
+    "\n",
     "### Assumptions\n",
-    "- Exposing valid p2 developers to what's app availabiilty update will result in additional AVS. Does not take into consideration of developers who have already are in available status.\n",
+    "- Exposing valid p2 developers to what's app availabiilty update will result in additional AVS. Does not take into consideration of developers who have already are in available status\n",
+    "\n",
     "### Data Discrepancy\n",
-    "- Developer Quality Segmentation supply is 46,761 but actual P2 pool is 48,855. PDSA team to validate.\n",
-    "- Convertion rate in growth dashboard does not align with the query when run in big query. Big query run conversion rate is higher.\n",
+    "- Developer Quality Segmentation supply is 46,761 but actual P2 pool is 48,855. PDSA team to validate\n",
+    "- Convertion rate in growth dashboard does not align with the query when run in big query. Big query run conversion rate is higher\n",
     "\n",
     " "
    ]
